Change BD to BL (namespaces, project name...)

--- a/FinanceManager.API/FinanceManager.Web/Views/Home/Index.cshtml
+++ b/FinanceManager.API/FinanceManager.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model FinanceManager.Web.Models.MonthSummaryViewModel
-@using FinanceManager.BD
+@using FinanceManager.BL
 @{
     ViewBag.Title = "Home Page";
 }
