Calculation fixes, models cleanup, month/period refactoring continued.

--- a/FinanceManager.API/FinanceManager.Web/Views/Home/Index.cshtml
+++ b/FinanceManager.API/FinanceManager.Web/Views/Home/Index.cshtml
@@ -58,9 +58,9 @@
                     {
                         <tr>
                             <td>@periodOperation.Name</td>
-                            <td>@periodOperation.TotalAmount</td>
+                            <td>@periodOperation.InitialAmount</td>
                             <td>@periodOperation.FinishDate</td>
-                            <td>@periodOperation.PaymentLeftAmount</td>
+                            <td>@periodOperation.CurrentAmount</td>
                             <td>@periodOperation.AlreadyPayedAmount</td>
                             <td>@periodOperation.CurrentPeriodPayedAmount</td>
                         </tr>
