Fixed data display, added date formatting.

--- a/FinanceManager.Web/FinanceManager.Web/Views/Home/Index.cshtml
+++ b/FinanceManager.Web/FinanceManager.Web/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="~/js/vendors/react.development.js" crossorigin></script>
     <script src="~/js/vendors/react-dom.development.js" crossorigin></script>
+    <script src="~/js/vendors/moment.js" crossorigin></script>
     <link rel="stylesheet" href="~/js/vendors/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <script src="~/js/src/components.js">
